fix alignment in header.

--- a/gem/static/css/enhanced.scss
+++ b/gem/static/css/enhanced.scss
@@ -77,7 +77,7 @@ button, input[type="submit"], .button, .gem-polls a {
   height: 48px;
   a {
     font-size: 16px;
-    padding: 10px;
+    padding: 5px 10px;
   }
 }
 
@@ -133,6 +133,7 @@ button, input[type="submit"], .button, .gem-polls a {
     order: 2;
     -webkit-order: 2;
     margin: 0 8px;
+
     font-size: 20px;
     line-height: 40px;
   }
