--- a/gem/static/css/style.scss
+++ b/gem/static/css/style.scss
@@ -69,6 +69,7 @@ a, a:hover {
 #gem-header {
   padding: 0 8px;
   line-height: 42px;
+  height: 42px;
   text-align: right;
   background: #00b8ae;
 
@@ -80,9 +81,9 @@ a, a:hover {
     color: #fff;
   }
 
-  a#logo {
-    padding: 0;
+  #logo {
     float: left;
+    padding: 0;
   }
 }
 
